--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,4 @@ services:
 
 before_install:
 - docker build -t kawashironitori/coolq .
+- docker run -d -p 127.0.0.1:9000:9000 --name coolq kawashironitori/coolq
